# Texture-and-Image-Classification

./: README.md
Bag_of_words_Vehicle Classification/: Problem2_b_sift.cpp  Problem2_bsurf.cpp
Edge Detection/: Problem3_Canny.m  Problem3_SE_Jaguar.m  Problem3_SE_Zebra.m  get_matrix.m  plot_PCA_point.m
Problem1/: Problem1_b.cpp
Problem2/: Problem2_a.cpp
Problem3/Edges/: edgesEvalImg.m
Texture Classification/: CMakeLists.txt  Problem1_a.cpp
Vehicle Classification/: CMakeLists.txt  Problem2_b_surf.cpp  Problem2_c_sift.cpp  Problem2_c_surf.cpp
