cmake_minimum_required(VERSION 2.8)
project( Homework3 )
find_package( OpenCV REQUIRED )
add_executable( P2a Problem2_a.cpp )
add_executable( P2b_sift Problem2_b_sift.cpp )
add_executable( P2b_surf Problem2_b_surf.cpp )
add_executable( P2c_sift Problem2_c_sift.cpp )
add_executable( P2c_surf Problem2_c_surf.cpp )

target_link_libraries( P2a  ${OpenCV_LIBS} )
target_link_libraries( P2b_sift  ${OpenCV_LIBS} )
target_link_libraries( P2b_surf  ${OpenCV_LIBS} )
target_link_libraries( P2c_sift  ${OpenCV_LIBS} )
target_link_libraries( P2c_surf  ${OpenCV_LIBS} )
